# h2g2-wasm

./: .env.local  .gitignore  .tool-versions  ARCHITECTURE.md  README.md  SECURITY_AUDIT_REPORT.md  TESTING_SUMMARY.md  TEST_PLAN.md  build.sh  moon.yml  package-lock.json  package.json  wrangler.toml
.beads/: issues.jsonl
.cf/: .tool-versions  build.sh  package.json  wrangler.toml
.moon/: tasks.yml  workspace.yml
.moon/cache/: runReport.json
.moon/cache/states/: moonVersionCheck.json
apps/web/: README.md  index.html  moon.yml  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/web/public/: h2g2_wasm.wasm
apps/web/src/: env-shim.js  index.css
apps/web/src/components/: DebugPanel.module.css  DebugPanel.tsx  HintModal.module.css  HintModal.tsx  SaveLoadDialog.module.css  SaveLoadDialog.tsx  Terminal.module.css  Terminal.tsx  TerminalControls.module.css  TerminalControls.tsx
apps/web/src/hooks/: useTerminal.ts  useWasm.ts  useWasmChecksum.ts
apps/web/src/pages/: Index.tsx
apps/web/tests/: HintModal.test.tsx  SaveLoadDialog.test.tsx  TerminalControls.test.tsx
encrusted/: Cargo.toml  moon.yml  package-lock.json  package.json
encrusted/data/: invisiclues.json
encrusted/src/rust/: ascii_art.rs  buffer.rs  game.rs  hints.rs  instruction.rs  lib.rs  options.rs  quetzal.rs  save_security.rs  traits.rs  ui_web.rs  zmachine.rs
encrusted/tests/: game_initialization.rs  hint_system.rs  save_load.rs  ui_output.rs
encrusted/tests/common/: mod.rs
scripts/: clean.sh
wasm/: Cargo.toml  moon.yml
wasm/src/: lib.rs
