[package]
name = "h2g2-wasm"
version = "0.1.0"
authors = ["Tucker"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
encrusted = { path = "../encrusted" }
serde_json = "1.0.145"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = "z"
strip = true
